Ajout du fichier index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-echo '<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Démo de l\'application</title>
+    <title>Démo de l'application</title>
 </head>
 <body>
     <h1>Démo de mon projet de jeu</h1>
     <iframe src="https://appetize.io/app/jlsxryy2ecksy6gu5dbpelk3eq?device=pixel7&osVersion=13.0&orientation=landscape" width="100%" height="667px" frameborder="0" scrolling="no"></iframe>
 </body>
-</html>' > index.html
+</html>
