Add index.html with link to Appetize.io

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+echo '<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Démo de mon projet de jeu</h1>
-    <iframe src="https://appetize.io/app/jlsxryy2ecksy6gu5dbpelk3eq?device=pixel7&osVersion=13.0&orientation=landscape" width="100%" height="667px" frameborder="0" scrolling="no"></iframe>
+    <p>Cliquez <a href="https://appetize.io/app/jlsxryy2ecksy6gu5dbpelk3eq?device=pixel7&osVersion=13.0&orientation=landscape" target="_blank">ici</a> pour voir la démo sur Appetize.io.</p>
 </body>
-</html>
+</html>' > index.html
